@@ -441,7 +441,7 @@ public class FetchFieldManager extends AbstractFetchFieldManager
                 try
                 {
                     Class instanceType = SCOUtils.getContainerInstanceType(mmd.getType(), mmd.getOrderMetaData() != null);
-                    coll = (Collection<Object>) instanceType.newInstance();
+                    coll = (Collection<Object>) instanceType.getDeclaredConstructor().newInstance();
                 }
                 catch (Exception e)
                 {
@@ -516,7 +516,7 @@ public class FetchFieldManager extends AbstractFetchFieldManager
                 try
                 {
                     Class instanceType = SCOUtils.getContainerInstanceType(mmd.getType(), null);
-                    map = (Map) instanceType.newInstance();
+                    map = (Map) instanceType.getDeclaredConstructor().newInstance();
                 }
                 catch (Exception e)
                 {
@@ -862,7 +862,7 @@ public class FetchFieldManager extends AbstractFetchFieldManager
             try
             {
                 Class instanceType = SCOUtils.getContainerInstanceType(mmd.getType(), mmd.getOrderMetaData() != null);
-                coll = (Collection<Object>) instanceType.newInstance();
+                coll = (Collection<Object>) instanceType.getDeclaredConstructor().newInstance();
             }
             catch (Exception e)
             {
@@ -942,7 +942,7 @@ public class FetchFieldManager extends AbstractFetchFieldManager
             try
             {
                 Class instanceType = SCOUtils.getContainerInstanceType(mmd.getType(), false);
-                map = (Map) instanceType.newInstance();
+                map = (Map) instanceType.getDeclaredConstructor().newInstance();
             }
             catch (Exception e)
             {
